Fix context sections' spacing in popup entries
Added labels for a lot of elements in <listNym>.

Per TAPAS weekly meeting on 2017-01-23, made the label for
<sex>/@sex to be "gender" since the latter is most likely to be
accurate for humanities data.

--- a/css/common.less
+++ b/css/common.less
@@ -90,6 +90,7 @@ margin: 0;
   
   > * {
     margin-bottom: 0.5em;
+    display: block;
   }
 }
 
