--- a/css/tapasGnormal.css
+++ b/css/tapasGnormal.css
@@ -51,6 +51,7 @@ body {
 }
 .og-context > * {
   margin-bottom: 0.5em;
+  display: block;
 }
 #tapas-ref-dialog {
   padding: 0.5em 1em;
